@@ -4,13 +4,13 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
 import seedu.address.commons.exceptions.IllegalValueException;
 import seedu.address.commons.util.DateUtil;
+import seedu.address.model.appointment.Appointment;
 import seedu.address.model.person.Address;
 import seedu.address.model.person.DateOfBirth;
 import seedu.address.model.person.Email;
@@ -38,6 +38,7 @@ class JsonAdaptedPerson {
     private final String nric;
     private final List<JsonAdaptedTag> tags = new ArrayList<>();
     private final String priority;
+    private final List<JsonAdaptedAppointment> appointments = new ArrayList<>();
 
     /**
      * Constructs a {@code JsonAdaptedPerson} with the given person details.
@@ -49,7 +50,9 @@ class JsonAdaptedPerson {
             @JsonProperty("gender") String gender,
             @JsonProperty("nric") String nric,
             @JsonProperty("tags") List<JsonAdaptedTag> tags,
-            @JsonProperty("priority") String priority) {
+            @JsonProperty("priority") String priority,
+            @JsonProperty("appointments") List<JsonAdaptedAppointment> appointments) {                  
+      
         this.name = name;
         this.phone = phone;
         this.email = email;
@@ -60,6 +63,9 @@ class JsonAdaptedPerson {
         this.nric = nric;
         if (tags != null) {
             this.tags.addAll(tags);
+        }
+        if (appointments != null) {
+            this.appointments.addAll(appointments);
         }
     }
 
@@ -75,9 +81,14 @@ class JsonAdaptedPerson {
         gender = source.getGender().value;
         nric = source.getNric().value;
         priority = source.getPriority().priority;
-        tags.addAll(source.getTags().stream()
-                .map(JsonAdaptedTag::new)
-                .collect(Collectors.toList()));
+        tags.addAll(source.getTags()
+                          .stream()
+                          .map(JsonAdaptedTag::new)
+                          .toList());
+        appointments.addAll(source.getAppointments()
+                                  .stream()
+                                  .map(JsonAdaptedAppointment::new)
+                                  .toList());
     }
 
     /**
@@ -87,6 +98,12 @@ class JsonAdaptedPerson {
      */
     public Person toModelType() throws IllegalValueException {
         final List<Tag> personTags = new ArrayList<>();
+        final List<Appointment> personAppointments = new ArrayList<>();
+
+        for (JsonAdaptedAppointment appointment : appointments) {
+            personAppointments.add(appointment.toModelType());
+        }
+
         for (JsonAdaptedTag tag : tags) {
             personTags.add(tag.toModelType());
         }
@@ -157,8 +174,10 @@ class JsonAdaptedPerson {
                     Priority.class.getSimpleName()));
         }
         final Priority modelPriority = new Priority(priority);
+        final Set<Appointment> modelAppointments = new HashSet<>(personAppointments);
         return new Person(modelName, modelPhone, modelEmail, modelNric, modelAddress, modelDateOfBirth,
-                modelGender, modelTags, modelPriority);
+                modelGender, modelTags, modelPriority, modelAppointments);
+
     }
 
 }
